# basic-meson-project

./: .gitignore  LICENSE  README.md  cross.build  meson.build
linker_scripts/: link.ld
scripts/: coverage_report.sh  gdb_script
src/: main.c
src/example_folder/: meson.build
src/example_folder/include/: example_folder_include.h
src/example_folder/src/: example_folder_src.c
src/example_folder/test/: test_example_folder.c
subprojects/: libopencm3.wrap  unity.wrap
subprojects/packagefiles/libopencm3_patch/: meson.build
